fix: positions elements out of container: 20min

--- a/assets/styles/components/header.scss
+++ b/assets/styles/components/header.scss
@@ -4,8 +4,7 @@
   z-index: 100;
   top: 0;
   left: 0;
-  padding-top: vw(65);
-  padding-bottom: vw(65);
+  padding: vw(65);
 }
 
 .header__wrapper {
